<resources>
  <string name="content_too_long">内容太长</string>
  <string name="last_message_file">[文件]</string>
  <string name="All">全部</string>
  <string name="IDcard">ID</string>
  <string name="abc_action_bar_home_description">Navigate home</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_menu_overflow_description">More options</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_activity_chooser_view_see_all">See all</string>
  <string name="abc_activitychooserview_choose_application">Choose an app</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_query">Search query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_shareactionprovider_share_with">Share with</string>
  <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="about">关于</string>
  <string name="about_back">返回</string>
  <string name="about_check_update_desc">检查当前版本是否有可用更新</string>
  <string name="about_device_info_title">设备诊断信息</string>
  <string name="about_logo_description">应用图标</string>
  <string name="about_overview_desc">感谢使用，我们重视每一次安全、透明的连接</string>
  <string name="about_privacy_policy_desc">了解个人信息的处理和保护方式</string>
  <string name="about_section_diagnostics">诊断工具</string>
  <string name="about_section_legal">协议与隐私</string>
  <string name="about_section_support">支持与反馈</string>
  <string name="about_test_tools_desc">打开测试人员专用的诊断与模拟工具</string>
  <string name="about_third_party_desc">查看第三方 SDK 及信息共享说明</string>
  <string name="about_upload_log_desc">选择并上传诊断日志以协助排查问题</string>
  <string name="about_user_agreement_desc">查看使用服务需要遵守的条款</string>
  <string name="about_version_format">版本 %1$s (%2$d)</string>
  <string name="aboutus">关于我们</string>
  <string name="accept_newmsg">接收新消息通知</string>
  <string name="account_binding">账号绑定</string>
  <string name="account_binding_back">返回</string>
  <string name="account_binding_bound">已绑定</string>
  <string name="account_binding_desc">管理已绑定的手机号与电子邮箱</string>
  <string name="account_binding_email_desc">可作为备用身份验证与账号找回方式</string>
  <string name="account_binding_email_unbound">尚未绑定电子邮箱</string>
  <string name="account_binding_overview_desc">绑定手机号和邮箱，提升登录与账号找回的安全性</string>
  <string name="account_binding_overview_title">完善账号验证方式</string>
  <string name="account_binding_phone_desc">用于登录、身份验证和账号安全通知</string>
  <string name="account_binding_phone_unbound">尚未绑定手机号</string>
  <string name="account_binding_security_tip">绑定或更换账号信息前，需要先完成安全验证。</string>
  <string name="account_binding_unbound">未绑定</string>
  <string name="account_diagnosis">账号状态</string>
  <string name="account_exist">该账号已存在</string>
  <string name="acount_security">账号与安全</string>
  <string name="activate_immediately">立即开通</string>
  <string name="add_circle_mode">入圈方式</string>
  <string name="add_friends">添加好友</string>
  <string name="add_group_managers">添加群管理员</string>
  <string name="add_group_members">添加群成员</string>
  <string name="add_to_phone_book">添加到通讯录</string>
  <string name="added">已添加</string>
  <string name="agree">同意</string>
  <string name="agree_apply">确认</string>
  <string name="agree_auth_tips">请先阅读并同意《隐私政策》和《用户协议》</string>
  <string name="agreed_apply">已通过</string>
  <string name="album">相册</string>
  <string name="album_permissions_desc">在设置-应用-%s-权限中开启存储空间权限。以正常使用在聊天、朋友圈、设置头像、设置聊天背景图片等功能中的图片查看和选择能力。</string>
  <string name="location_permission_desc">在设置-应用-%s-权限中开启位置信息权限。以正常使用位置发送、位置共享等功能。</string>
  <string name="alipay">支付宝</string>
  <string name="all">所有人</string>
  <string name="all_emoji">所有表情</string>
  <string name="all_staff">全员</string>
  <string name="allcity">全部</string>
  <string name="allin">全选</string>
  <string name="allow_screenshot">允许截屏</string>
  <string name="androidx_compose_foundation_autofill">Autofill</string>
  <string name="androidx_compose_ui_autofill">Autofill</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="answer">接听</string>
  <string name="app_idnum">%s：</string>
  <string name="app_name">Milo</string>
  <string name="app_slogan">两行代码，即可通讯</string>
  <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
  <string name="apply">申请加好友</string>
  <string name="apply_friend">加为好友</string>
  <string name="apply_join_group">[进群申请]</string>
  <string name="apply_status_added">已添加</string>
  <string name="apply_status_expired">已过期</string>
  <string name="apply_status_refuse">已拒绝</string>
  <string name="apply_status_refused">被拒绝</string>
  <string name="apply_status_wait">待验证</string>
  <string name="applyed">已申请</string>
  <string name="applyforentry">申请入圈</string>
  <string name="approve_groupmember">[群成员审核]</string>
  <string name="ar_feed_sound_cancel">松手取消</string>
  <string name="at_all">选择所有人</string>
  <string name="attachment_import_failed">附件读取失败</string>
  <string name="audio_call">语音通话</string>
  <string name="auditswitch">审核开关</string>
  <string name="auth_by_login_device">通过安全验证的设备</string>
  <string name="auth_phone">验证您的手机号</string>
  <string name="auth_phone_tips">%s会发送短信验证手机号码，请输入您的验证码</string>
  <string name="authorization_request">权限申请</string>
  <string name="auto_delete_after_custom">设置自定义时间</string>
  <string name="auto_delete_close">关闭</string>
  <string name="auto_delete_custom_after">%s后</string>
  <string name="auto_delete_day_after">一天后</string>
  <string name="auto_delete_days">%s 天</string>
  <string name="auto_delete_in">%s 后自动删除</string>
  <string name="auto_delete_message">自动删除消息</string>
  <string name="auto_delete_month_after">一月后</string>
  <string name="auto_delete_months">%s 月</string>
  <string name="auto_delete_off">关闭</string>
  <string name="auto_delete_title">多久后自动删除</string>
  <string name="auto_delete_week_after">一周后</string>
  <string name="auto_delete_weeks">%s 周</string>
  <string name="auto_delete_year">1 年</string>
  <string name="auto_lock">自动锁定</string>
  <string name="auto_recall_message">消息自动撤回</string>
  <string name="avni">导航</string>
  <string name="b_complete">完成</string>
  <string name="back">back</string>
  <string name="backup_message">备份聊天记录</string>
  <string name="backup_message_desc">"1．迁移本地聊天记录，需要将您的聊天记录上传至服务器以支持新设备下载；
2．聊天记录会以不记名加密的方式存储在服务器；
3．为了防止信息泄露，服务器将于每天0:00删除当天用户上传的聊天记录；
4．每一次备份，都将覆盖前一次备份的聊天记录，请谨慎操作；
5．建议用户确认聊天记录迁移完毕后再删除原设备上的聊天记录；
6．由此功能造成任何的不良后果由用户自行承担；"</string>
  <string name="base_delete">删除</string>
  <string name="base_forward">转发</string>
  <string name="base_permission_authorization_desc">在设置-应用-%1$s-权限中开启所需权限，以正常使用相关功能</string>
  <string name="base_permission_authorization_request">权限申请</string>
  <string name="base_permission_cancel">取消</string>
  <string name="base_permission_continue">继续授权</string>
  <string name="base_permission_to_settings">去设置</string>
  <string name="base_unknow_msg">[不支持的消息类型，或许可升级版本后查看]</string>
  <string name="base_withdraw">撤回</string>
  <string name="batch_forward_check_failed">校验失败，请稍后再试</string>
  <string name="batch_forward_closed_count">%d位用户关闭陌生人消息</string>
  <string name="batch_forward_failed_summary">以下联系人暂时无法发起临时会话</string>
  <string name="batch_forward_need_temp_count" formatted="false">%d位用户需创建临时会话，当前剩余额度(%d/%d)</string>
  <string name="batch_forward_quota_unknown">临时会话使用情况：--/--</string>
  <string name="batch_forward_quota_usage">临时会话使用情况：%1$d/%2$d</string>
  <string name="batch_forward_reason_closed">对方未开启临时会话</string>
  <string name="batch_forward_reason_need_temp">可发起临时会话配额已达上限</string>
  <string name="batch_forward_sent_count">成功发送%d个会话</string>
  <string name="batch_forward_tip_title">温馨提示</string>
  <string name="bind_email">绑定邮箱</string>
  <string name="bind_phone">绑定手机号</string>
  <string name="bind_success">绑定成功</string>
  <string name="binding">绑定</string>
  <string name="bindtipdialog_content_1">为保障您的账户安全，请先完成手机号绑定</string>
  <string name="bindtipdialog_content_2">说明：新绑定的手机号，在%s天内不能作为换绑验证条件</string>
  <string name="bindtipdialog_content_3">为保障您的账户安全，请先完成邮箱绑定</string>
  <string name="bindtipdialog_content_4">说明：新绑定的邮箱，在%s天内不能作为换绑验证条件</string>
  <string name="black_list">黑名单</string>
  <string name="black_list_back">返回</string>
  <string name="black_list_count">已屏蔽 %d 位用户</string>
  <string name="black_list_desc">已添加至黑名单，你将不再收到对方的消息</string>
  <string name="black_list_empty_desc">被你屏蔽的用户会显示在这里</string>
  <string name="black_list_empty_title">黑名单中暂无用户</string>
  <string name="black_list_load_failed">黑名单加载失败</string>
  <string name="black_list_overview_desc">黑名单中的用户无法向你发送消息</string>
  <string name="black_list_overview_title">管理已屏蔽的用户</string>
  <string name="black_list_retry">重新加载</string>
  <string name="black_list_unknown_user">未知用户</string>
  <string name="black_list_view_profile">查看资料与管理屏蔽状态</string>
  <string name="blacklist_group">群内黑名单，消息发送失败，确定重发吗？</string>
  <string name="blacklist_manage">黑名单管理</string>
  <string name="blacklist_manage_desc">查看和管理已屏蔽的用户</string>
  <string name="blacklist_user">黑名单用户，消息发送失败，确定重发吗？</string>
  <string name="blacklisthint">消息已发出，但被对方拒收了。</string>
  <string name="blocked_ban">对方无法接收消息</string>
  <string name="blurred">模糊</string>
  <string name="bot">机器人</string>
  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
  <string name="bottomsheet_action_collapse">Collapse</string>
  <string name="bottomsheet_action_collapse_description">Collapse the bottom sheet</string>
  <string name="bottomsheet_action_expand">Expand</string>
  <string name="bottomsheet_action_expand_description">Expand the bottom sheet</string>
  <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
  <string name="cancel">取消</string>
  <string name="circle_delete">删除</string>
  <string name="circle_report">举报</string>
  <string name="close">关闭</string>
  <string name="confirm">确定</string>
  <string name="currency_symbol">￥</string>
  <string name="dialog_content">"尊敬的用户:在使用软件之前,为了让您更好地了解我们是如何保护用户的个人信息,请您仔细阅读《用户协议》和《隐私政策》 
重点内容如下: 
1.当您使用服务时,我们会根据您您的同意,获取您的手机号码、设备信息等 
2.,我们会使用 Cookie 与同类技术来确保服务正常运转。 
3.您可以通过本隐私政策所列的途径访问、更正个人信息,也可以进行与我们取得联系进行删除操作等。 
4.未经您许可,我们不会向任何第三方提供您的信息。 
5.完整内容点击上方蓝色链接查看。"</string>
  <string name="dialog_title">用户协议与隐私政策</string>
  <string name="disagree">不同意</string>
  <string name="enter_id_hint">请输入ID号</string>
  <string name="find_new_version">发现新版本</string>
  <string name="location">位置</string>
  <string name="note">笔记</string>
  <string name="note_share_title">选择分享内容</string>
  <string name="presentation_video">展示视频</string>
  <string name="purchase_vip_label">购买VIP</string>
  <string name="str_label_delete">删除标签</string>
  <string name="str_label_input_name">例如家人、朋友</string>
  <string name="str_label_members">成员</string>
  <string name="str_label_name">标签名字</string>
  <string name="update_now">立即更新</string>
  <string name="version_desc">更新说明</string>
  <string name="vip_for_others_title">为他人开通</string>
</resources>