<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/layout_bg_white_5"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="@dimen/font_size_20"
        android:textStyle="bold"
        android:textColor="@color/colorDark"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_title"/>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/agreementScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/font_size_16"
                android:textColor="@color/colorDark"
                android:id="@+id/contentTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_content"
                android:lineSpacingExtra="3dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/color999"
            android:id="@+id/disagreeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disagree"/>
        <TextView
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/colorDark"
            android:id="@+id/agreeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree"
            android:layout_marginStart="25dp"/>
    </LinearLayout>
</LinearLayout>
