<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/shap_bottom_sheet_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="17sp"
        android:textColor="@color/red_FA5151"
        android:gravity="center"
        android:id="@+id/tvReport"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/circle_report"
        android:paddingVertical="14dp"/>
    <View
        android:id="@+id/line"
        android:background="@color/line_color_F1F2F4"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"/>
    <TextView
        android:textSize="17sp"
        android:textColor="@color/textPrimaryColor"
        android:gravity="center"
        android:id="@+id/tvConfirm"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/circle_delete"
        android:paddingVertical="14dp"/>
    <View
        android:background="@color/line_color_F1F2F4"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>
    <TextView
        android:textSize="17sp"
        android:textColor="@color/textPrimaryColor"
        android:gravity="center"
        android:id="@+id/tvCancel"
        android:paddingTop="14dp"
        android:paddingBottom="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>
