<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shap_bottom_sheet_bg"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black_3C4047"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vip_for_others_title"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/close"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:srcCompat="@drawable/ic_close_normal"
        app:tint="@color/black_3C4047"/>
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/ff3c4047"
        android:id="@+id/tv_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/currency_symbol"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
        app:layout_constraintEnd_toStartOf="@+id/tv_price"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/ff3c4047"
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_unit"
        app:layout_constraintTop_toBottomOf="@+id/iv_close"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/c888A95"
        android:id="@+id/tv_user_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/purchase_vip_label"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_shopcart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/ff3c4047"
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_user_id_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_user_id_label"/>
    <EditText
        android:textSize="16sp"
        android:textColor="@color/black_3C4047"
        android:textColorHint="@color/ffb4b6bd"
        android:id="@+id/et_user_id"
        android:background="@drawable/bg_edit_text"
        android:padding="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_id_hint"
        android:maxLength="20"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_id_label"/>
    <TextView
        android:textSize="14sp"
        android:textColor="@color/fffa5151"
        android:ellipsize="end"
        android:id="@+id/tv_error_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_id"/>
    <TextView
        android:enabled="false"
        android:textSize="16sp"
        android:textColor="@color/white_abs"
        android:gravity="center"
        android:id="@+id/tv_confirm"
        android:background="@drawable/bg_state_enabled_blue_r8_all"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="42dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_message"/>
</androidx.constraintlayout.widget.ConstraintLayout>
