<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/common_bottom_view_top_bg"
    android:layout_width="match_parent"
    android:layout_height="280dp">
    <TextView
        android:textSize="17dp"
        android:textColor="@color/popnote2title"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/note_share_title"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <RelativeLayout
            android:id="@+id/rlpop_btn_note"
            android:background="@drawable/btn_noteshare_okbg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="5dp">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/c3F74FC"
                android:id="@+id/txtpop_btn_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/img_pop_btn_note"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/note_share_isok"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlpop_btn_show"
            android:background="@drawable/btn_noteshare_nobg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/popnote2text"
                android:id="@+id/txtpop_btn_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/presentation_video"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/img_pop_btn_show"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/note_share_isno"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rlpop_btn_location"
            android:background="@drawable/btn_noteshare_nobg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/popnote2text"
                android:id="@+id/txtpop_btn_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_centerInParent="true"/>
            <ImageView
                android:id="@+id/img_pop_btn_location"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/note_share_isno"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:textSize="16dp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:id="@+id/btn_sure"
        android:background="@drawable/btn_3f74fc_shape_bg_select"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="54dp"
        android:text="@string/agree_apply"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</LinearLayout>
