<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/homeColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/wk_title_bar_layout"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/homeColor"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="14sp"
                android:textColor="@color/color999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/str_label_name"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"/>
            <LinearLayout
                android:background="@color/layoutColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <androidx.appcompat.widget.AppCompatEditText
                    android:textSize="16sp"
                    android:textColor="@color/colorDark"
                    android:gravity="center_vertical"
                    android:id="@+id/nameEt"
                    android:background="@color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:hint="@string/str_label_input_name"
                    android:maxLength="36"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"/>
            </LinearLayout>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/color999"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/str_label_members"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:background="@color/layoutColor"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteBtn"
                android:visibility="gone"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/str_label_delete"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:backgroundTint="@color/red"
                style="@style/buttonNormal"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
